<resources>
    <string name="app_name">EduTechProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featurename">FeatureName</string>

    <!--    Features Names  -->
    <string name="feature_name_contact_list">Contact List</string>
    <string name="feature_name_async_tasks">Async Tasks</string>
    <string name="feature_name_navigation_component">Navigation Component</string>
    <string name="feature_name_notes_app">Notes App</string>

    <!--  Drawer Menu  -->
    <string name="homeItem">Home</string>
    <string name="navigationItem">Navigation</string>

    <!--    SharedPreferencesFragment strings  -->
    <string name="feature_name_shared_prefs">Shared Preferences</string>
    <string name="enterToSaveInfo">Enter values to see how Shared Preferences</string>
    <string name="saveSharedPrefsInfo">Save data using Shared Preferences</string>
    <string name="loadSharedPrefsInfo">Reads saved data using Shared Preferences</string>
    <string name="clearUserData">Clear all data</string>
    <string name="afterSaveSharedPrefsInfo">
        Now you can close your app completely and open again.
        The data will be restored
    </string>

    <!--  Navigation Component Fragment  -->
    <string name="passingDataInfo">
        Passing Data in Navigation Component are done using Safe args.
        Click button below to pass some data to another fragment
    </string>
    <string name="passingDataBtn">Pass Data</string>
    <string name="passingNoDataBtn">Pass NO Data</string>

    <!--  Passed Safe Args Fragment  -->
    <string name="passedDataSuccess">Data passed and retrieved successfully!</string>
    <string name="passedDataError">Data was not passed</string>
    <string name="numberDefaultValue">Number: %1$d</string>
    <string name="stringDefaultValue">Text: %1$s</string>
    <string name="booleanValue">Boolean: </string>

    <!-- Notes Fragment  -->
    <string name="notes_main_info_text">
        This mini app is written using SQLite, Hilt and Kotlin Coroutines.
        The GridLayout is used for XML layout design.
        The ViewModel is used for saving state of activity
    </string>
    <string name="title_example">Title</string>
    <string name="description_example">Description</string>
    <string name="dataTime_example">31/12/2024</string>
    <string name="sqllite_load_notes_btn">SQLite</string>
    <string name="room_load_notes_btn">Room</string>
    <string name="firebase_load_notes_btn">Firebase Storage</string>

    <!-- Add Note Fragment   -->
    <string name="note_enter_title">Enter Title:</string>
    <string name="note_enter_description">Enter Description:</string>
    <string name="note_edit_title">Edit Title:</string>
    <string name="note_edit_description">Edit Description:</string>
    <string name="note_edit_date">Edit Date:</string>
    <string name="choose_date">Choose date</string>
    <string name="add_note_btn">Add Note</string>
    <string name="edit_note_btn">Edit Note</string>
    <string name="delete_note_btn">Delete Note</string>

    <!--    Other strings  -->
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="clear">Clear</string>
    <string name="customInfoText">Custom Info Text</string>

    <string name="preference_file_key">com.example.edutechproject.PREFERENCE_FILE_KEY</string>
</resources>