<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.notes_mini_app.presentation.ui.EditNoteFragment"
    android:orientation="vertical"
    android:padding="@dimen/normalMargin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_edit_title"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_edit_date"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataTime_example"/>

        <Button
            android:id="@+id/chooseDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/choose_date"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_edit_description"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="20"/>

    <Button
        android:id="@+id/editNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_note_btn"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>