<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.notes_mini_app.presentation.ui.NoteFragment"
    android:padding="@dimen/normalMargin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_enter_title"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="02/01/2025"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_enter_description"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/editNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_note_btn"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/deleteNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note_btn"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>