<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.passed_safe_args.PassedSafeArgsFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/passedDataStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passedDataError"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="@dimen/normalMargin">

        <TextView
            android:id="@+id/passedNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberDefaultValue"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/passedStringTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringDefaultValue"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/passedBoolCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="20sp"
            android:text="@string/booleanValue"
            android:layoutDirection="rtl"/>
    </LinearLayout>
</LinearLayout>