<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normalMargin"
    tools:context=".features.notes_mini_app.presentation.ui.NotesFragment">

    <com.example.edutechproject.utils.custom_views.InfoTextView
        android:id="@+id/notes_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes_main_info_text"
        app:textSize="13sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@id/notes_info_text"/>

    <LinearLayout
        android:id="@id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sqliteLoadNotesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sqllite_load_notes_btn"/>

            <Button
                android:id="@+id/roomLoadNotesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/room_load_notes_btn"/>

            <Button
                android:id="@+id/firebaseLoadNotesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/firebase_load_notes_btn"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsContainer" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/add_vector"
        android:contentDescription="@string/add_note_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>